--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>My awesome web page</title>
     </head>
   <body>
-    <h1>Hello there, awesome person!</h1> 
+    <img https://media.tenor.com/images/ef1cfa38bfa0d9d01fa77d3166dfa9a9/tenor.gif> 
   </body>
 </html>
