--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>My awesome web page</title>
     </head>
   <body>
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img https://avatars1.githubusercontent.com/u/54996459?v=4>
   </body>
 </html>
