--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>My awesome web page</title>
     </head>
   <body>
-    <img src="https://media.tenor.com/images/ef1cfa38bfa0d9d01fa77d3166dfa9a9/tenor.gif">
+    <img src="https://avatars1.githubusercontent.com/u/54996459?v=4">
   </body>
 </html>
