--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title><h1>My awesome web page</h1></title>
     </head>
   <body>
     <img src="https://avatars1.githubusercontent.com/u/54996459?v=4">
