--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title>My awesome web page</title>
     </head>
   <body>
+      * stuff
+      * stuff
     <img src="https://avatars1.githubusercontent.com/u/54996459?v=4">
   </body>
 </html>
+
