--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
         <title>My awesome web page</title>
     </head>
   <body>
+      <ul>
+          * wadwawdwa
+          *sfdbwfeq
+      </ul>
     <img src="https://avatars1.githubusercontent.com/u/54996459?v=4">
   </body>
 </html>
