--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
         <title>My awesome web page</title>
     </head>
   <body>
-      <ul>
-          * wadwawdwa
-          *sfdbwfeq
-      </ul>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
     <img src="https://avatars1.githubusercontent.com/u/54996459?v=4">
   </body>
 </html>
