--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
   <body>
       <li><a href="https://github.com">This is a link to GitHub!</a></li>
